<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">PocketVenice</string>

    <!-- TEXT FIELDS -->
    <string name="full_name">Full name</string>
    <string name="age">Age</string>
    <string name="date_format">dd/MM/yyyy</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>

    <!-- BUTTONS -->
    <string name="login">Login</string>
    <string name="forgot_your_password">FORGOT YOUR PASSWORD?</string>
    <string name="register">Register</string>
    <string name="submit">Submit</string>
    <string name="resend_code">Resend Code</string>
    <string name="register_question">You don\'t have an account?</string>

    <!-- ICON DESC -->
    <string name="desc_logo">App logo</string>
    <string name="username_desc">Username icon</string>
    <string name="age_desc">Age icon</string>
    <string name="desc_mobile">Mobile icon</string>
    <string name="desc_email">Email icon</string>
    <string name="desc_pass">Password icon</string>

    <!-- MISCELLANEOUS -->
    <string name="asterisk">*</string>
    <string name="didn_t_receive">Didn\'t receive the OTP?</string>


    <string name="back">Go back to</string>
    <string name="password_reset">Password Reset</string>
    <string name="logout">Logout</string>
    <string name="menu_desc">Menu navbar icon</string>
    <string name="profile">Profile</string>
    <string name="login_sign_up">Login / Sign-up</string>
    <string name="help">Help</string>
    <string name="faq">FAQ</string>
    <string name="guide">Guide</string>
    <string name="app_info">App Info</string>
    <string name="test_fullname">User_fullname</string>
    <string name="verified">Verified</string>
    <string name="news">News</string>
    <string name="events">Events</string>
    <string name="place">Places</string>
    <string name="map">Map</string>
    <string name="access_as">Access as a</string>
    <string name="guest">Guest User</string>
    <string name="or">or</string>
    <string name="author">Author</string>
    <string name="default_date">01 January 2000</string>
    <string name="title">Titolo</string>
    <string name="description">Descrizione</string>
    <string name="source">Source</string>
    <string name="time">Time</string>
    <string name="api_key">1dd430c786bb4fd38e650493cb32755c</string>
    <string name="subtitle">Subtitle</string>
    <string name="recent_news">Recent News</string>
    <string name="error_title">Error Title</string>
    <string name="error_message">Error Message</string>
    <string name="retry">Retry</string>
    <string name="google_maps_key">AIzaSyBRTccEhjzTfOBUTzNvIrKJcZU63jUhf1g</string>
    <string name="loading">Loading..</string>
    <string name="district">Sestiere</string>
    <string name="address">Indirizzo</string>
    <string name="score">Valutazione</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="hyphen">-</string>
    <string name="from_hour">From Hour</string>
    <string name="to_hour">To Hour</string>
    <string name="date">Date</string>
    <string name="time_name">Time</string>
    <string name="get_started">Get Started</string>
    <string name="next">Next</string>
    <string name="add_event">Add Event</string>
    <string name="src_place">Search place in map</string>
    <string name="serach_for">Cerca</string>
    <string name="enter_some">Cerca qualcosa</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="credits">Credits</string>
    <string name="domanda_autorizzazione">Per quale scopo è necessaria l\'autorizzazione della posizione?</string>
    <string name="risposta_autorizzazione">La posizione è necessaria per poter visualizzare sulla mappa dove ci si trova e comprendere meglio la distanza dai punti di interesse.</string>
    <string name="domanda_email">Non ricevo e-mail dopo la registrazione oppure selezionando \'Password dimenticata\'. Qual è il motivo?</string>
    <string name="risposta_email">A volte l\'invio può richiedere del tempo. Verificare anche nella cartella Spam o Posta indesiderata della casella di posta elettronica.</string>
    <string name="domanda_compatibilita" tools:ignore="Typos">Su quali dispositivi mobili è possibile utilizzare l\'app?</string>
    <string name="risposta_compatibilita">L\'app è compatibile con la maggior parte dei dispositivi mobili moderni Android a partire dalla versione 10.</string>
    <string name="domanda_app">A cosa serve l\'app?</string>
    <string name="risposta_app">Questa app ti aiuta ad esplorare e visitare Venezia: ti tiene aggiornato su notizie ed eventi di Venezia e ti illustra i principali luoghi da visitare, permettendo di visualizzare la mappa.</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="share">Share</string>
    <string name="open_browser">Open in browser</string>
    <string name="cancel">Cancel</string>
    <string name="default_password">******</string>
    <string name="Nicolo">Bregantin Nicolò</string>
    <string name="Leonardo">Bilardi Leonardo</string>
    <string name="Beatrice">Spagnolo Beatrice</string>
    <string name="Maisha">Bhuiyan Maisha Fahmida</string>
    <string name="Darky">Zotea Dumitru</string>

</resources>