<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/profile"
        android:icon="@drawable/profile"
        android:title="@string/profile" />

    <item
        android:id="@+id/login_sign_up"
        android:icon="@drawable/password"
        android:title="@string/login_sign_up"
        android:visible="false" />

    <item android:title="@string/help">
        <menu>
            <item
                android:id="@+id/faq"
                android:icon="@drawable/ic_question_mark_24"
                android:title="@string/faq" />

            <item
                android:id="@+id/guide"
                android:icon="@drawable/ic_guide_24"
                android:title="@string/guide" />

            <item
                android:id="@+id/info"
                android:icon="@drawable/ic_app_information_24"
                android:title="@string/app_info" />

        </menu>
    </item>

    <item
        android:id="@+id/logout"
        android:icon="@drawable/ic_logout_24"
        android:title="@string/logout" />

</menu>