<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Auth.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="273dp"
            android:background="@drawable/blue_bg">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="45dp"
                android:contentDescription="@string/desc_logo"
                android:src="@drawable/logo" />

        </FrameLayout>

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="65dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:gravity="center"
                        android:text="@string/login"
                        android:textColor="#000000"
                        android:textSize="30sp"
                        android:textStyle="bold" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ProgressBar
                        android:id="@+id/progress_bar"
                        style="?android:attr/progressBarStyleLarge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="MissingConstraints" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginStart="65dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="65dp"
                    android:background="@drawable/blue_border_rounded_corner">

                    <!-- Fields for input: -->
                    <EditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_toEndOf="@+id/username_icon"
                        android:autofillHints="emailAddress"
                        android:background="@android:color/transparent"
                        android:fontFamily="@font/poppins_regular"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:paddingStart="17dp"
                        android:paddingTop="12dp"
                        android:paddingBottom="12dp"
                        android:textColorHint="#b31a34"
                        android:textCursorDrawable="@drawable/cursor_color"
                        android:textSize="12sp"
                        tools:ignore="RtlSymmetry" />

                    <!--ICONS-->
                    <ImageView
                        android:id="@id/username_icon"
                        android:layout_width="15dp"
                        android:layout_height="10dp"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="17dp"
                        android:contentDescription="@string/desc_email"
                        android:src="@drawable/email" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginStart="65dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="65dp"
                    android:background="@drawable/blue_border_rounded_corner">

                    <!-- Fields for input: -->
                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_toEndOf="@+id/icon"
                        android:autofillHints="password"
                        android:background="@android:color/transparent"
                        android:fontFamily="@font/poppins_regular"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:paddingStart="17dp"
                        android:paddingTop="12dp"
                        android:paddingBottom="12dp"
                        android:textColorHint="#b31a34"
                        android:textCursorDrawable="@drawable/cursor_color"
                        android:textSize="12sp"
                        tools:ignore="RtlSymmetry" />

                    <!--ICONS-->
                    <ImageView
                        android:id="@id/icon"
                        android:layout_width="15dp"
                        android:layout_height="10dp"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="17dp"
                        android:contentDescription="@string/desc_pass"
                        android:src="@drawable/password" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="65dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="65dp"
                    android:background="#b31a34"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center"
                    android:paddingTop="14dp"
                    android:paddingBottom="14dp"
                    android:text="@string/login"
                    android:textColor="#c3b377"
                    android:textSize="12sp" />

            </LinearLayout>
        </ScrollView>

        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/forgot_your_password"
            android:textColor="#b31a34"
            android:textSize="11sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">


            <TextView
                android:id='@+id/question'
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_medium"
                android:gravity="end"
                android:padding="4dp"
                android:text="@string/register_question"
                android:textColor="#666666"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_medium"
                android:padding="4dp"
                android:text="@string/register"
                android:textColor="#b31a34"
                android:textSize="11sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="1dp"
            android:orientation="horizontal">


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/or"
                android:textColor="#666666"
                android:textSize="11sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="1dp"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_medium"
                android:gravity="end"
                android:padding="4dp"
                android:text="@string/access_as"
                android:textColor="#666666"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/guest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_medium"
                android:padding="4dp"
                android:text="@string/guest"
                android:textColor="#b31a34"
                android:textSize="11sp" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>