<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/newsErrorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:visibility="gone">

    <ImageView
        android:id="@+id/errorImage"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:src="@drawable/no_result"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/errorTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/errorImage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center_horizontal"
        android:text="@string/error_title"
        android:textColor="@color/colorPrimaryText"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/errorMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/errorTitle"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/poppins_regular"
        android:gravity="center_horizontal"
        android:text="@string/error_message"
        android:textColor="@color/colorPrimaryText" />

    <TextView
        android:id="@+id/btnRetry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/errorMessage"
        android:layout_gravity="center"
        android:layout_marginStart="65dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="65dp"
        android:background="@drawable/red_fill__rounded_color"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center_horizontal"
        android:paddingTop="14dp"
        android:paddingBottom="14dp"
        android:text="@string/retry"
        android:textColor="#c3b377"
        android:textSize="15sp" />

</RelativeLayout>